--- a/app/src/main/res/layout/activity_schulte.xml
+++ b/app/src/main/res/layout/activity_schulte.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:gravity="center_horizontal"
-        android:text="@string/_ename_schulte_table"
+        android:text="@string/ename_schulte_table"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:text="@string/startshulte"
+        android:text="@string/start_shulte"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -356,7 +356,7 @@
         android:id="@+id/timer_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/_time_elapsed"
+        android:text="@string/_00_00"
         android:textSize ="36sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/layer5"
