--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,13 +30,14 @@
                 android:id="@+id/password"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
-                android:inputType="textPassword"
+                android:autofillHints="password"
                 android:backgroundTint="#808080"
-                android:drawableLeft="@drawable/password"
+                android:drawableStart="@drawable/password"
                 android:ems="10"
-                android:hint="Password"
+                android:hint="@string/password"
+                android:inputType="textPassword"
                 android:textColor="#000000"
-                android:textColorHint="#000000"
+                android:textColorHint="#E8F5E9"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,12 +48,13 @@
                 android:id="@+id/username"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
-                android:backgroundTint="#808080"
+                android:autofillHints="emailAddress"
+                android:drawableStart="@drawable/mail"
                 android:ems="10"
-                android:drawableLeft="@drawable/mail"
-                android:hint="Email"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress"
                 android:textColor="#000000"
-                android:textColorHint="#000000"
+                android:textColorHint="#E8F5E9"
                 app:layout_constraintBottom_toTopOf="@+id/password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,12 +64,11 @@
 
             <Button
                 android:id="@+id/signin"
-                style="@style/Widget.Material3.Button.ElevatedButton"
                 android:layout_width="152dp"
                 android:layout_height="59dp"
                 android:layout_weight="1"
-                android:text="Sign In"
-                android:textSize="20dp"
+                android:text="@string/sign_in"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,12 +78,11 @@
 
             <Button
                 android:id="@+id/signup"
-                style="@style/Widget.Material3.Button.ElevatedButton"
                 android:layout_width="152dp"
                 android:layout_height="59dp"
                 android:layout_weight="1"
-                android:text="Sign Up"
-                android:textSize="20dp"
+                android:text="@string/sign_up"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
