--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -32,60 +32,64 @@
                 android:layout_width="250dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#808080"
-                android:drawableLeft="@drawable/password"
+                android:drawableStart="@drawable/password"
                 android:ems="10"
-                android:hint="Password"
+                android:hint="@string/password_1"
+                android:importantForAutofill="no"
                 android:inputType="textPassword"
                 android:textColor="#000000"
-                android:textColorHint="#000000"
+                android:textColorHint="#E8F5E9"
                 app:layout_constraintBottom_toTopOf="@+id/confirm"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/username"
                 tools:ignore="MissingConstraints" />
+
             <EditText
                 android:id="@+id/confirm"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#808080"
-                android:drawableLeft="@drawable/password"
+                android:drawableStart="@drawable/password"
                 android:ems="10"
-                android:hint="Confirm Password"
+                android:hint="@string/confirm_password"
                 android:inputType="textPassword"
                 android:textColor="#000000"
-                android:textColorHint="#000000"
+                android:textColorHint="#E8F5E9"
                 app:layout_constraintBottom_toTopOf="@+id/signup"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/password"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:importantForAutofill="no" />
 
             <EditText
                 android:id="@+id/username"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#808080"
+                android:drawableStart="@drawable/mail"
                 android:ems="10"
-                android:drawableLeft="@drawable/mail"
-                android:hint="Email"
+                android:hint="@string/email_reg"
                 android:textColor="#000000"
-                android:textColorHint="#000000"
+                android:textColorHint="#E8F5E9"
                 app:layout_constraintBottom_toTopOf="@+id/password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:inputType="textEmailAddress"
+                android:importantForAutofill="no" />
 
 
             <Button
                 android:id="@+id/signup"
-                style="@style/Widget.Material3.Button.ElevatedButton"
                 android:layout_width="152dp"
                 android:layout_height="59dp"
                 android:layout_marginTop="166dp"
                 android:layout_weight="1"
-                android:text="Sign Up"
-                android:textSize="20dp"
+                android:text="@string/sign_up_reg"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
