--- a/app/src/main/res/drawable/layout_bg.xml
+++ b/app/src/main/res/drawable/layout_bg.xml
@@ -3,7 +3,7 @@
     <item>
     <shape >
 
-    <solid android:color="#7A687F"/>
+    <solid android:color="#454545"/>
     <stroke android:width="3dp" android:color="#B1BCBE" />
     <corners android:radius="30dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
