--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,11 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
 
         <item name="android:colorBackground">@color/dark_blue</item>
         <item name="android:windowBackground">@color/dark_blue</item>
+        <item name="materialButtonStyle">@style/Widget.MaterialComponents.Button</item>
+
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/Accent</item>
@@ -14,12 +16,13 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/Background</item>
-        <item name="android:background">@color/Primary</item>
+        <item name="android:background">@color/PrimaryDark</item>
 
         <!-- Styles for various UI elements. -->
         <item name="android:buttonStyle">@style/ButtonStyle</item>
         <item name="android:editTextStyle">@style/EditTextStyle</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>
     </style>
 
     <!-- Button style. -->
@@ -39,5 +42,12 @@
     <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/Background</item>
+    </style>
+    <style name="Widget.App.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>
+    </style>
+    <style name="ThemeOverlay.App.BottomNavigationView" parent="">
+        <item name="colorSurface">@color/AccentLight</item>
+        <item name="colorOnSurfaceVariant">@color/Accent</item>
     </style>
 </resources>
